// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/WorkpadFilters/WorkpadFiltersComponent Empty filters groups 1`] = `
<div>
  <div
    className="canvasLayout__sidebar"
  >
    <div
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="canvasSidebar__panel canvasSidebar__expandable"
      >
        <div
          className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            className="euiFlexItem"
          >
            <div
              className="euiText euiText--medium"
            >
              <h5>
                Group by
              </h5>
            </div>
          </div>
          <div
            className="euiFlexItem"
          >
            <div
              className="euiFormControlLayout euiFormControlLayout--compressed"
            >
              <div
                className="euiFormControlLayout__childrenWrapper"
              >
                <select
                  aria-label="Use aria labels when no actual label is in use"
                  className="euiSelect euiSelect--compressed"
                  defaultValue=""
                  onChange={[Function]}
                  onMouseUp={[Function]}
                >
                  <option
                    value="filterGroup"
                  >
                    Filter group
                  </option>
                  <option
                    value="type"
                  >
                    Filter type
                  </option>
                  <option
                    value="column"
                  >
                    Column
                  </option>
                </select>
                <div
                  className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                >
                  <span
                    className="euiFormControlLayoutCustomIcon"
                  >
                    <span
                      aria-hidden="true"
                      className="euiFormControlLayoutCustomIcon__icon"
                      data-euiicon-type="arrowDown"
                      size="s"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/WorkpadFilters/WorkpadFiltersComponent Filters groups without group name 1`] = `
<div>
  <div
    className="canvasLayout__sidebar"
  >
    <div
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="canvasSidebar__panel canvasSidebar__expandable"
      >
        <div
          className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            className="euiFlexItem"
          >
            <div
              className="euiText euiText--medium"
            >
              <h5>
                Group by
              </h5>
            </div>
          </div>
          <div
            className="euiFlexItem"
          >
            <div
              className="euiFormControlLayout euiFormControlLayout--compressed"
            >
              <div
                className="euiFormControlLayout__childrenWrapper"
              >
                <select
                  aria-label="Use aria labels when no actual label is in use"
                  className="euiSelect euiSelect--compressed"
                  onChange={[Function]}
                  onMouseUp={[Function]}
                  value="filterGroup"
                >
                  <option
                    value="filterGroup"
                  >
                    Filter group
                  </option>
                  <option
                    value="type"
                  >
                    Filter type
                  </option>
                  <option
                    value="column"
                  >
                    Column
                  </option>
                </select>
                <div
                  className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                >
                  <span
                    className="euiFormControlLayoutCustomIcon"
                  >
                    <span
                      aria-hidden="true"
                      className="euiFormControlLayoutCustomIcon__icon"
                      data-euiicon-type="arrowDown"
                      size="s"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="canvasSidebar__expandable"
      >
        <div
          className="euiAccordion euiAccordion-isOpen canvasSidebar__accordion filtersSidebar__accordion"
          style={
            Object {
              "marginLeft": "0px",
            }
          }
        >
          <div
            className="euiAccordion__triggerWrapper"
          >
            <button
              aria-controls="canvas-filter-group-0"
              aria-expanded={true}
              aria-labelledby="generated-id"
              className="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiAccordion__iconButton euiAccordion__iconButton-isOpen"
              onClick={[Function]}
              tabIndex={-1}
              type="button"
            >
              <span
                aria-hidden="true"
                className="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="arrowRight"
                size="m"
              />
            </button>
            <button
              aria-controls="canvas-filter-group-0"
              aria-expanded={true}
              className="euiAccordion__button"
              id="generated-id"
              onClick={[Function]}
              type="button"
            >
              <span
                className="euiAccordion__buttonContent"
              >
                Without group
              </span>
            </button>
          </div>
          <div
            aria-labelledby="generated-id"
            className="euiAccordion__childWrapper"
            id="canvas-filter-group-0"
            role="region"
            tabIndex={-1}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/WorkpadFilters/WorkpadFiltersComponent Filters groups without name 1`] = `
<div>
  <div
    className="canvasLayout__sidebar"
  >
    <div
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="canvasSidebar__panel canvasSidebar__expandable"
      >
        <div
          className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            className="euiFlexItem"
          >
            <div
              className="euiText euiText--medium"
            >
              <h5>
                Group by
              </h5>
            </div>
          </div>
          <div
            className="euiFlexItem"
          >
            <div
              className="euiFormControlLayout euiFormControlLayout--compressed"
            >
              <div
                className="euiFormControlLayout__childrenWrapper"
              >
                <select
                  aria-label="Use aria labels when no actual label is in use"
                  className="euiSelect euiSelect--compressed"
                  onChange={[Function]}
                  onMouseUp={[Function]}
                  value="column"
                >
                  <option
                    value="filterGroup"
                  >
                    Filter group
                  </option>
                  <option
                    value="type"
                  >
                    Filter type
                  </option>
                  <option
                    value="column"
                  >
                    Column
                  </option>
                </select>
                <div
                  className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                >
                  <span
                    className="euiFormControlLayoutCustomIcon"
                  >
                    <span
                      aria-hidden="true"
                      className="euiFormControlLayoutCustomIcon__icon"
                      data-euiicon-type="arrowDown"
                      size="s"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="canvasSidebar__expandable"
      >
        <div
          className="euiAccordion euiAccordion-isOpen canvasSidebar__accordion filtersSidebar__accordion"
          style={
            Object {
              "marginLeft": "0px",
            }
          }
        >
          <div
            className="euiAccordion__triggerWrapper"
          >
            <button
              aria-controls="canvas-filter-group-0"
              aria-expanded={true}
              aria-labelledby="generated-id"
              className="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiAccordion__iconButton euiAccordion__iconButton-isOpen"
              onClick={[Function]}
              tabIndex={-1}
              type="button"
            >
              <span
                aria-hidden="true"
                className="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="arrowRight"
                size="m"
              />
            </button>
            <button
              aria-controls="canvas-filter-group-0"
              aria-expanded={true}
              className="euiAccordion__button"
              id="generated-id"
              onClick={[Function]}
              type="button"
            >
              <span
                className="euiAccordion__buttonContent"
              >
                (Blank)
              </span>
            </button>
          </div>
          <div
            aria-labelledby="generated-id"
            className="euiAccordion__childWrapper"
            id="canvas-filter-group-0"
            role="region"
            tabIndex={-1}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/WorkpadFilters/WorkpadFiltersComponent Filters groups without name and filters 1`] = `
<div>
  <div
    className="canvasLayout__sidebar"
  >
    <div
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="canvasSidebar__panel canvasSidebar__expandable"
      >
        <div
          className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            className="euiFlexItem"
          >
            <div
              className="euiText euiText--medium"
            >
              <h5>
                Group by
              </h5>
            </div>
          </div>
          <div
            className="euiFlexItem"
          >
            <div
              className="euiFormControlLayout euiFormControlLayout--compressed"
            >
              <div
                className="euiFormControlLayout__childrenWrapper"
              >
                <select
                  aria-label="Use aria labels when no actual label is in use"
                  className="euiSelect euiSelect--compressed"
                  defaultValue=""
                  onChange={[Function]}
                  onMouseUp={[Function]}
                >
                  <option
                    value="filterGroup"
                  >
                    Filter group
                  </option>
                  <option
                    value="type"
                  >
                    Filter type
                  </option>
                  <option
                    value="column"
                  >
                    Column
                  </option>
                </select>
                <div
                  className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                >
                  <span
                    className="euiFormControlLayoutCustomIcon"
                  >
                    <span
                      aria-hidden="true"
                      className="euiFormControlLayoutCustomIcon__icon"
                      data-euiicon-type="arrowDown"
                      size="s"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="canvasSidebar__expandable"
      >
        <div
          className="euiAccordion euiAccordion-isOpen canvasSidebar__accordion filtersSidebar__accordion"
          style={
            Object {
              "marginLeft": "0px",
            }
          }
        >
          <div
            className="euiAccordion__triggerWrapper"
          >
            <button
              aria-controls="canvas-filter-group-0"
              aria-expanded={true}
              aria-labelledby="generated-id"
              className="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiAccordion__iconButton euiAccordion__iconButton-isOpen"
              onClick={[Function]}
              tabIndex={-1}
              type="button"
            >
              <span
                aria-hidden="true"
                className="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="arrowRight"
                size="m"
              />
            </button>
            <button
              aria-controls="canvas-filter-group-0"
              aria-expanded={true}
              className="euiAccordion__button"
              id="generated-id"
              onClick={[Function]}
              type="button"
            >
              <span
                className="euiAccordion__buttonContent"
              >
                (Blank)
              </span>
            </button>
          </div>
          <div
            aria-labelledby="generated-id"
            className="euiAccordion__childWrapper"
            id="canvas-filter-group-0"
            role="region"
            tabIndex={-1}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/WorkpadFilters/WorkpadFiltersComponent default 1`] = `
<div>
  <div
    className="canvasLayout__sidebar"
  >
    <div
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="canvasSidebar__panel canvasSidebar__expandable"
      >
        <div
          className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            className="euiFlexItem"
          >
            <div
              className="euiText euiText--medium"
            >
              <h5>
                Group by
              </h5>
            </div>
          </div>
          <div
            className="euiFlexItem"
          >
            <div
              className="euiFormControlLayout euiFormControlLayout--compressed"
            >
              <div
                className="euiFormControlLayout__childrenWrapper"
              >
                <select
                  aria-label="Use aria labels when no actual label is in use"
                  className="euiSelect euiSelect--compressed"
                  defaultValue=""
                  onChange={[Function]}
                  onMouseUp={[Function]}
                >
                  <option
                    value="filterGroup"
                  >
                    Filter group
                  </option>
                  <option
                    value="type"
                  >
                    Filter type
                  </option>
                  <option
                    value="column"
                  >
                    Column
                  </option>
                </select>
                <div
                  className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                >
                  <span
                    className="euiFormControlLayoutCustomIcon"
                  >
                    <span
                      aria-hidden="true"
                      className="euiFormControlLayoutCustomIcon__icon"
                      data-euiicon-type="arrowDown"
                      size="s"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="canvasSidebar__expandable"
      >
        <div
          className="euiAccordion euiAccordion-isOpen canvasSidebar__accordion filtersSidebar__accordion"
          style={
            Object {
              "marginLeft": "0px",
            }
          }
        >
          <div
            className="euiAccordion__triggerWrapper"
          >
            <button
              aria-controls="canvas-filter-group-0"
              aria-expanded={true}
              aria-labelledby="generated-id"
              className="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiAccordion__iconButton euiAccordion__iconButton-isOpen"
              onClick={[Function]}
              tabIndex={-1}
              type="button"
            >
              <span
                aria-hidden="true"
                className="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="arrowRight"
                size="m"
              />
            </button>
            <button
              aria-controls="canvas-filter-group-0"
              aria-expanded={true}
              className="euiAccordion__button"
              id="generated-id"
              onClick={[Function]}
              type="button"
            >
              <span
                className="euiAccordion__buttonContent"
              >
                Group 1
              </span>
            </button>
          </div>
          <div
            aria-labelledby="generated-id"
            className="euiAccordion__childWrapper"
            id="canvas-filter-group-0"
            role="region"
            tabIndex={-1}
          />
        </div>
      </div>
      <div
        className="canvasSidebar__expandable"
      >
        <div
          className="euiAccordion euiAccordion-isOpen canvasSidebar__accordion filtersSidebar__accordion"
          style={
            Object {
              "marginLeft": "0px",
            }
          }
        >
          <div
            className="euiAccordion__triggerWrapper"
          >
            <button
              aria-controls="canvas-filter-group-1"
              aria-expanded={true}
              aria-labelledby="generated-id"
              className="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiAccordion__iconButton euiAccordion__iconButton-isOpen"
              onClick={[Function]}
              tabIndex={-1}
              type="button"
            >
              <span
                aria-hidden="true"
                className="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="arrowRight"
                size="m"
              />
            </button>
            <button
              aria-controls="canvas-filter-group-1"
              aria-expanded={true}
              className="euiAccordion__button"
              id="generated-id"
              onClick={[Function]}
              type="button"
            >
              <span
                className="euiAccordion__buttonContent"
              >
                Group 2
              </span>
            </button>
          </div>
          <div
            aria-labelledby="generated-id"
            className="euiAccordion__childWrapper"
            id="canvas-filter-group-1"
            role="region"
            tabIndex={-1}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
